--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "node": ">= 0.10.0"
   },
   "dependencies": {
-    "mocha-phantomjs": "~3.5.0",
+    "mocha-phantomjs": "https://github.com/blacktail/mocha-phantomjs/archive/v3.6.1.tar.gz",
     "phantomjs": "~1.9.1",
     "lodash": "2.4.1",
     "async": "~0.2"
@@ -38,9 +38,6 @@
     "chai": "*",
     "mocha": "*",
     "grunt-contrib-connect": "~0.7.1"
-  },
-  "peerDependencies": {
-    "grunt": "~0.4.0"
   },
   "keywords": [
     "gruntplugin",
